parser/src/snapshots/rapidus_parser__array1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Array(
                    [
                        Node {
                            base: Number(
                                1.0,
                            ),
                            loc: Loc(line:1,column:1,pos:1),
                        },
                        Node {
                            base: Number(
                                2.0,
                            ),
                            loc: Loc(line:1,column:4,pos:4),
                        },
                    ],
                ),
                loc: Loc(line:1,column:1,pos:1),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
