parser/src/snapshots/rapidus_parser__array3.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Array(
                    [
                        Node {
                            base: Nope,
                            loc: Loc(line:1,column:1,pos:1),
                        },
                        Node {
                            base: Nope,
                            loc: Loc(line:1,column:1,pos:1),
                        },
                    ],
                ),
                loc: Loc(line:1,column:1,pos:1),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
