parser/src/snapshots/rapidus_parser__asi1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: FunctionDecl(
                    "f",
                    [],
                    Node {
                        base: StatementList(
                            [
                                Node {
                                    base: Return(
                                        None,
                                    ),
                                    loc: Loc(line:3,column:19,pos:43),
                                },
                                Node {
                                    base: Block(
                                        [],
                                    ),
                                    loc: Loc(line:4,column:14,pos:58),
                                },
                            ],
                        ),
                        loc: Loc(line:2,column:10,pos:23),
                    },
                ),
                loc: Loc(line:1,column:9,pos:9),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
