parser/src/snapshots/rapidus_parser__block1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Block(
                    [
                        Node {
                            base: Assign(
                                Node {
                                    base: Identifier(
                                        "a",
                                    ),
                                    loc: Loc(line:1,column:2,pos:2),
                                },
                                Node {
                                    base: Number(
                                        1.0,
                                    ),
                                    loc: Loc(line:1,column:4,pos:4),
                                },
                            ),
                            loc: Loc(line:1,column:2,pos:2),
                        },
                    ],
                ),
                loc: Loc(line:1,column:2,pos:2),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
