parser/src/snapshots/rapidus_parser__boolean.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Boolean(
                    true,
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
            Node {
                base: Boolean(
                    false,
                ),
                loc: Loc(line:1,column:6,pos:6),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
