parser/src/snapshots/rapidus_parser__call2.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Call(
                    Node {
                        base: Identifier(
                            "f",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    [],
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
