parser/src/snapshots/rapidus_parser__call3.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Call(
                    Node {
                        base: Identifier(
                            "f",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    [
                        Node {
                            base: Number(
                                1.0,
                            ),
                            loc: Loc(line:1,column:2,pos:2),
                        },
                        Node {
                            base: Number(
                                2.0,
                            ),
                            loc: Loc(line:1,column:5,pos:5),
                        },
                        Node {
                            base: Number(
                                3.0,
                            ),
                            loc: Loc(line:1,column:8,pos:8),
                        },
                    ],
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
