parser/src/snapshots/rapidus_parser__continue1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: While(
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:6,pos:6),
                    },
                    Node {
                        base: Block(
                            [
                                Node {
                                    base: Continue(
                                        None,
                                    ),
                                    loc: Loc(line:1,column:17,pos:17),
                                },
                            ],
                        ),
                        loc: Loc(line:1,column:9,pos:9),
                    },
                ),
                loc: Loc(line:1,column:5,pos:5),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
