parser/src/snapshots/rapidus_parser__for1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Block(
                    [
                        Node {
                            base: For(
                                Node {
                                    base: Nope,
                                    loc: Loc(line:1,column:5,pos:5),
                                },
                                Node {
                                    base: Boolean(
                                        true,
                                    ),
                                    loc: Loc(line:1,column:6,pos:6),
                                },
                                Node {
                                    base: Nope,
                                    loc: Loc(line:1,column:7,pos:7),
                                },
                                Node {
                                    base: Block(
                                        [],
                                    ),
                                    loc: Loc(line:1,column:11,pos:11),
                                },
                            ),
                            loc: Loc(line:1,column:4,pos:4),
                        },
                    ],
                ),
                loc: Loc(line:1,column:4,pos:4),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
